--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -3,6 +3,6 @@
     <%= f.text_area :body %>
   </p>
   <p>
-    <%= f.submit %>
+    <input class="button-primary" type="submit" value="Reply">
   </p>
 <% end %>
