--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -1,13 +1,22 @@
-<h4>This is in _form.html.erb</h4>
+<h4>Post a question and select the relevant tags</h4>
 
 <%= form_for @question do |f| %>
   <p>
     <%= f.label :title %>
     <%= f.text_field :title, :required => true %>
-    <%= f.label :body %>
-    <%= f.text_area :body %>
+    <div class = "body-area"><%= f.label :body %>
+    <%= f.text_area :body %></div>
   </p>
 
-  <%= f.submit %>
+  <p>Please tag the areas relevant to your question.<br>
+    <%= hidden_field_tag "question[tag_ids][]", nil %>
+    <% Tag.all.each do |tag| %>
+      <%= check_box_tag "question[tag_ids][]", tag.id, @question.tag_ids.include?(tag.id), id: dom_id(tag) %>
+      <%= label_tag dom_id(tag), tag.name %>
+        <br>
+      <% end %>
+  </p>
+
+  <input class="button-primary" type="submit" value="SUBMIT">
 
 <% end %>
