--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,30 +5,48 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+  <link rel="stylesheet" href="css/medium-editor.css"> <!-- Core -->
+  <link rel="stylesheet" href="css/themes/default.css"> <!-- or any other theme -->
 </head>
 <body>
 
+<div class="container">
+
   <% if flash[:success] %>
-    <h1><%= flash[:success] %></h1>
+    <h3><%= flash[:success] %></h3>
   <% end %>
   <% if flash[:error] %>
-    <h1><%= flash[:error] %></h1>
+    <h3><%= flash[:error] %></h3>
   <% end %>
 
-  <nav>
-    <%= link_to( "Questions", questions_path() )%>
 
+  <nav>
+    <a class="button button-primary" <%= link_to("Home", questions_path()) %></a>
+    <a class="button button-primary" <%= link_to("Tags", tags_path()) %></a>
+    <a class="button button-primary" <%= link_to("Users", users_path()) %></a>
+
+    <!-- <h4><#%= link_to( "Home", questions_path() )%>
+    <#%= link_to( "Tags", tags_path() )%>
+    <#%= link_to( "Users", users_path() )%> -->
     <% unless @current_user.present? %>
+      <a class="button button-primary" <%= link_to("Login", login_path()) %></a>
+      <a class="button button-primary" <%= link_to("Sign Up", new_user_path()) %></a>
       <%= link_to( "Login", login_path() ) %>
       <%= link_to( "Sign up", new_user_path() ) %>
     <% else %>
-      <%= link_to( "View your profile", user_path( @current_user.id ) ) %>
-      <%= link_to( "Log out of #{@current_user.name}", logout_path(), :method => :delete ) %>
+      <a class="button button-primary" <%= link_to("View your profile", user_path( @current_user.id ))%></a>
+      <a class="button button-primary" <%= link_to("Log out of #{@current_user.name}", logout_path(), :method => :delete) %></a>
+      <!-- <#%= link_to( "View your profile", user_path( @current_user.id ) ) %>
+      <#%= link_to( "Log out of #{@current_user.name}", logout_path(), :method => :delete ) %> -->
     <% end %>
-  </nav>
 
+    <%= @online_users %></h4>
+  </nav>
 
 <%= yield %>
 
+<script src="//cdn.jsdelivr.net/medium-editor/latest/js/medium-editor.min.js"></script>
+<link rel="stylesheet" href="//cdn.jsdelivr.net/medium-editor/latest/css/medium-editor.min.css" type="text/css" media="screen" charset="utf-8">
+</div>
 </body>
 </html>
