--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,11 +1,26 @@
-<h1>List of users</h1>
-
-<ul>
-  <% @users.each do |u| %>
-    <li>
-      <%= link_to( u.name, user_path( u ) ) %>
-      <%#= link_to( u.name, user_path( u ) ) %>
-      <%#= link_to( u.name, u ) %>
-    </li>
-  <% end %>
-</ul>
+<h3>Users of Hackoverflow</h3>
+<div class="row">
+  <div class="five columns">
+  <table class="u-full-width">
+    <thead>
+      <tr>
+      <th>User</th>
+      <th>Questions</th>
+      <th>Comments</th>
+      <th>Votes</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @users.each do |u| %>
+      <tr>
+        <!-- <#% u.order("questions_count asc") %> -->
+        <td><%= link_to( u.name, user_path( u ) ) %></td>
+        <td><%= u.questions.count%></td>
+        <td><%= u.comments.count%></td>
+        <td><%= u.get_votes + u.get_comments_votes %></td>
+      </tr>
+    <% end %>
+    </tbody>
+  </table>
+  </div>
+</div>
