--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,9 @@
-<h3>Users of Hackoverflow</h3>
+
 <div class="row">
-  <div class="five columns">
+  <div class="three columns"></div>
+
+  <div class="six columns">
+    <h3>Users of Hackoverflow</h3>
   <table class="u-full-width">
     <thead>
       <tr>
