--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,8 @@
 </head>
 <body>
 
+<header></header> <br>
+
 <div class="container">
 
   <% if flash[:success] %>
@@ -20,33 +22,38 @@
   <% end %>
 
 
-  <nav>
-    <a class="button button-primary" <%= link_to("Home", questions_path()) %></a>
-    <a class="button button-primary" <%= link_to("Tags", tags_path()) %></a>
-    <a class="button button-primary" <%= link_to("Users", users_path()) %></a>
+  <nav> <ul>
+    <li><h4>hack overflow</h4></li>
+    <li><a class="button button-primary" <%= link_to("Home", questions_path()) %></a></li>
+    <li><a class="button button-primary" <%= link_to("Tags", tags_path()) %></a></li>
+    <li><a class="button button-primary" <%= link_to("Users", users_path()) %></a></li>
 
     <!-- <h4><#%= link_to( "Home", questions_path() )%>
     <#%= link_to( "Tags", tags_path() )%>
     <#%= link_to( "Users", users_path() )%> -->
     <% unless @current_user.present? %>
-      <a class="button button-primary" <%= link_to("Login", login_path()) %></a>
-      <a class="button button-primary" <%= link_to("Sign Up", new_user_path()) %></a>
-      <%= link_to( "Login", login_path() ) %>
-      <%= link_to( "Sign up", new_user_path() ) %>
+      <li><a class="button button-primary" <%= link_to("Login", login_path()) %></a></li>
+      <li><a class="button button-primary" <%= link_to("Sign Up", new_user_path()) %></a></li>
     <% else %>
-      <a class="button button-primary" <%= link_to("View your profile", user_path( @current_user.id ))%></a>
-      <a class="button button-primary" <%= link_to("Log out of #{@current_user.name}", logout_path(), :method => :delete) %></a>
+      <li><a class="button button-primary" <%= link_to("View your profile", user_path( @current_user.id ))%></a></li>
+      <li><a class="button button-primary" <%= link_to("Log out of #{@current_user.name}", logout_path(), :method => :delete) %></a></li>
       <!-- <#%= link_to( "View your profile", user_path( @current_user.id ) ) %>
       <#%= link_to( "Log out of #{@current_user.name}", logout_path(), :method => :delete ) %> -->
     <% end %>
 
     <%= @online_users %></h4>
+    </ul>
   </nav>
 
 <%= yield %>
 
+
+
+</div>
+<!-- <footer></footer> -->
 <script src="//cdn.jsdelivr.net/medium-editor/latest/js/medium-editor.min.js"></script>
 <link rel="stylesheet" href="//cdn.jsdelivr.net/medium-editor/latest/css/medium-editor.min.css" type="text/css" media="screen" charset="utf-8">
-</div>
+
+
 </body>
 </html>
