--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -8,12 +8,11 @@
     <%= f.text_area :body %></div>
   </p>
 
-  <p>Please tag the areas relevant to your question.<br>
+  <p>Please tag the areas relevant to your question.
     <%= hidden_field_tag "question[tag_ids][]", nil %>
-    <% Tag.all.each do |tag| %>
-      <%= check_box_tag "question[tag_ids][]", tag.id, @question.tag_ids.include?(tag.id), id: dom_id(tag) %>
-      <%= label_tag dom_id(tag), tag.name %>
-        <br>
+      <% Tag.all.each do |tag| %>
+        <div><%= check_box_tag "question[tag_ids][]", tag.id, @question.tag_ids.include?(tag.id), id: dom_id(tag) %><%= label_tag dom_id(tag), tag.name %></div>
+
       <% end %>
   </p>
 
