--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -380,8 +380,8 @@ form {
 /* Misc
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 hr {
-  margin-top: 3rem;
-  margin-bottom: 3.5rem;
+  margin-top: .5rem;
+  margin-bottom: .5rem;
   border-width: 0;
   border-top: 1px solid #E1E1E1; }
 
@@ -487,4 +487,33 @@ tr:nth-child(odd) {
 
 .tag-boxes {
   display: inline-block;
+}
+
+.question-head {
+  font-size: 1.8rem;
+  letter-spacing: -.05rem;
+  margin-bottom: 0;
+}
+
+.plain-line {
+    border-width: 0;
+    border-top: 1px solid #E1E1E1;
+}
+
+.box {
+  display: inline-block;
+  padding: 0 30px;
+  color: #555;
+  width: 100%;
+  font-size: 11px;
+  font-weight: 600;
+  line-height: 38px;
+  letter-spacing: .1rem;
+  text-decoration: none;
+  white-space: nowrap;
+  background-color: transparent;
+  border-radius: 4px;
+  border: 1px solid #bbb;
+  cursor: pointer;
+  box-sizing: border-box;
 }
