--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,14 +1,29 @@
 <% if comment.user %>
 
-  <div><strong>Reply: </strong></div>
+  <div class="row">
+  <div class="nine columns">
+    <h5 class="question-head">Post by: <%= link_to comment.user.name, "/users/#{comment.user.id}" %> <%= image_tag comment.user.image %>
+  </div>
+
+  <div class="three columns">
+    <p class="button">
+      <%= link_to like_comment_path(comment), method: :put do %>Vote
+        <%= comment.get_upvotes.size %>
+      <% end %>
+
+    </p>
+  </div>
+
+  </h5>
+
+
+  </div>
 
   <p><%= comment.body %> </p>
-  <p><strong>User: <%= link_to( comment.user.name, "/users/#{comment.user.id}" ) %> <%= image_tag comment.user.image %>
-  Created: <%= time_ago_in_words(comment.created_at) %> ago.  <%= link_to like_comment_path(comment), method: :put do %>
-  Vote <%= comment.get_upvotes.size %></strong>
-
+  <p>Created: <%= time_ago_in_words(comment.created_at) %> ago.  <%= link_to like_comment_path(comment), method: :put do %>
 <% end %>
-<br>
+<hr>
+
   <% if comment.user == @current_user %>
 
   <%= form_for([@question, comment]) do |f| %>
