--- a/app/views/tags/index.html.erb
+++ b/app/views/tags/index.html.erb
@@ -1,10 +1,14 @@
 <!-- Print every tag -->
-<h2>Search questions via tags</h2>
+<div class="container">
 
-  <% @tags.each do |a| %>
-
-<!-- Add a link_to( -->
-  <a class="button" <%= link_to(a.name, tag_path( a )) %></a>
-  <!-- <#%= link_to(a.name, tag_path( a )) %> -->
-
-    <% end %>
+    <div class="rows">
+      <div class="one-third column">
+      </div>
+      <div class="two-third columns">
+        <h5>Search questions via tags</h5>
+        <% @tags.each do |a| %>
+        <a class="button" <%= link_to(a.name, tag_path( a )) %></a>
+      <% end %>
+      </div>
+    </div>
+</div>
