--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -33,7 +33,7 @@
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 .container {
   position: relative;
-
+  min-height: calc(100vh - 150px);
   width: 100%;
   max-width: 960px;
   margin: 0 auto;
@@ -128,6 +128,9 @@ html {
 body {
   font-size: 1.5em; /* currently ems cause chrome bug misinterpreting rems on body element */
   line-height: 1.6;
+  min-height: 100%;
+  margin: 0;
+  padding: 0;
   font-weight: 400;
   font-family: "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #222; }
@@ -430,36 +433,50 @@ there.
 
 /* ANDREW'S STYLES*/
 
-header {
-  height: 10px;
-  background: black;
+.footer {
+  height: 40px;
+  width: 100%;
+  background: #333333;
   color: ghostwhite;
+  position: relative;
+  bottom: 0;
+  left: 0;
   text-align: center;
-  top: 0px;
 }
 
-footer {
-  height: 20px;
-  /*padding: 10px;*/
-  /*float: right;*/
-  /*margin: 10px auto;*/
-  /*display: inline-block;*/
-  background: black;
-  color: ghostwhite;
-  text-align: center;
-  bottom: 0px;
+.title {
+  color: #FFFFFF;
+  padding-top: 4%;
 }
 
 img {
   width: 40px;
   height: 40px;
 }
+
+nav {
+  background: #333333;
+  height: 54px;
+  line-height: 54px;
+  width: 100%;
+  position: relative;
+  height: 100%;
+}
+
 nav ul {
     list-style: none;
     margin: 0;
     padding: 0;
+    margin-left: 7.2%;
     display: flex;
     justify-content: space-around;
+    width: 70%;
+    float:none;
+}
+
+nav li {
+  margin-bottom: 0;
+  padding-top: 1%;
 }
 
 .big-border {
@@ -468,21 +485,19 @@ nav ul {
 }
 
 tr:nth-child(even) {
-  background-color: rgba(255,255,255,0.1);
-  padding-left: 20px;
-  padding-right: 20px;
-}
-
-tr:nth-child(odd) {
   background-color: rgba(255,255,255,0.3);
   padding-left: 20px;
   padding-right: 20px;
 }
 
-.body-area {
-  /*height: 88px;
-  width: 300px;
-  padding: 6px 10px;*/
+tr:nth-child(odd) {
+  background-color: rgba(255,255,255,0.7);
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+td .big-border {
+  padding-left: 8px;
 }
 
 .tag-boxes {
