--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -375,9 +375,13 @@ form {
   max-width: 100%;
   box-sizing: border-box; }
 .u-pull-right {
-  float: right; }
+  float: right;
+  margin-right: 10%;
+}
 .u-pull-left {
-  float: left; }
+  float: left;
+  margin-left: 8%;
+ }
 
 
 /* Misc
@@ -454,29 +458,19 @@ img {
   height: 40px;
 }
 
-nav {
+.nav {
   background: #333333;
   height: 54px;
   line-height: 54px;
   width: 100%;
   position: relative;
   height: 100%;
-}
-
-nav ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    margin-left: 7.2%;
-    display: flex;
-    justify-content: space-around;
-    width: 70%;
-    float:none;
-}
-
-nav li {
-  margin-bottom: 0;
   padding-top: 1%;
+  justify-content: space-around;
+}
+
+.u-pull-right a {
+  /*padding-right: 10px;*/
 }
 
 .big-border {
